--- a/src/main/resources/META-INF/resources/create.html
+++ b/src/main/resources/META-INF/resources/create.html
@@ -123,7 +123,7 @@
 				                        <div ng-if="skill.type == 'SINGLE'">
 				                          	<div ng-if="skill.values[0].specialisable">
 				                        		<div ng-repeat="subskill in masterData().findSubSkills(skill.values[0].name)">
-				                        			<label><input type="radio" ng-model="subskill.checked" value="{{ subskill.name }}"> {{ subskill.name }} </label>
+				                        			<label><input type="radio" ng-model="$parent.selectedItem" value="{{ subskill.name }}"> {{ subskill.name }} </label>
 				                        		</div>
 				                        	</div>
 				                        	<div ng-if="!skill.values[0].specialisable">
